test/visibility/only/hidesDeeperFunction.good
hidesDeeperFunction.chpl:18: In function 'main':
hidesDeeperFunction.chpl:19: error: unresolved call 'bar()'
hidesDeeperFunction.chpl:19: note: because no functions named bar found in scope
